# rosalind-algo-solutions-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  docker-compose.yml
src/: main.rs  util.rs
src/cmd/: bins.rs  fibo.rs  mod.rs
